--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.18.6",
     "@tsconfig/recommended": "^1.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "2.7.1",
     "typescript": "^4.7.4"
   }
 }
