--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "license": "MIT",
   "scripts": {
     "prepare": "husky install",
-    "start": "node -r @babel/register src/valet.ts",
-    "lint": "yarn eslint --fix ."
+    "valet": "babel-node -x .ts src/valet.ts",
+    "type-check": "tsc",
+    "lint": "eslint --fix ."
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "moment": "^2.29.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.6",
     "@babel/core": "^7.18.6",
+    "@babel/node": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.18.6",
     "@tsconfig/recommended": "^1.0.1",
