--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "commander": "^9.3.0",
     "moment": "^2.29.3"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.18.6",
     "@tsconfig/recommended": "^1.0.1",
+    "@types/node": "^18.0.1",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
